# translation3

./: .replit  app.py  app_diagnose.py  app_fixed.py  app_safe.py  pyproject.toml  replit.md  requirements.txt  streamlit_test.py
.streamlit/: config.toml
attached_assets/: Pasted--About-Features-Tesseract-OCR-with-Assamese-language-Free-Google-Translate-no-API-key--1763363091593_1763363091594.txt  Pasted--About-Features-Tesseract-OCR-with-Assamese-language-Free-Google-Translate-no-API-key--1763368485832_1763368485834.txt  Pasted-I-have-to-translate-this-pdf-written-in-assamese-and-translated-output-should-be-in-english-in-same-1763363073028_1763363073029.txt
