[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "deep-translator>=1.11.4",
    "fitz>=0.0.1.dev2",
    "pillow>=12.0.0",
    "pymupdf>=1.26.6",
    "pytesseract>=0.3.13",
    "reportlab>=4.4.4",
    "streamlit>=1.51.0",
]
